--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Responsiv video</h1>
+    <h1>Responsiv video til hold A</h1>
 
     <div class="hs-responsive-embed-youtube">
 
